# dlibAruco

./: README.md  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/tzutalin/dlibtest/: CameraActivity.java  CameraConnectionFragment.java  FloatingCameraWindow.java  MainActivity.java  OnGetImageListener.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  camera_connection_fragment.xml
app/src/main/res/values/: strings.xml
openCVLibrary341/: build.gradle
